2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Support the enum value CAIRO_FONT_TYPE_QUARTZ.  (RT
	#34681)

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/CairoSurface.t: Cairo::PsSurface->create can under certain
	conditions apparently return a surface that is not a PS surface.
	Handle this gracefully.  (RT #33871)

2008-04-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Stable release 1.060.

2008-04-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm: Add documentation for new API.

2008-03-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Trap exceptions thrown by EU::PkgConfig->find.
	When one occurs, exit with status 0 to indicate to CPAN testers
	that their system isn't supported.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.053.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* Cairo.xs
	* t/Cairo.t: Wrap cairo_has_current_point.

2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.052.

2008-02-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.xs
	* t/Cairo.t: Wrap cairo_path_extents.

	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_format_stride_for_width.  Adapt to
	API changes: cairo_surface_copy_page and cairo_surface_show_page
	don't return cairo_status_t anymore.

	* CairoPath.xs: Fix the tied interface for paths on perl 5.6,
	whose magic support was slightly broken.  Also cleanup the tie
	code a bit.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.051.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_surface_copy_page and
	cairo_surface_show_page.

	* Cairo.pm
	* Makefile.PL
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_ps_surface_restrict_to_level,
	cairo_ps_get_levels, and cairo_ps_level_to_string.

	* Cairo.pm
	* CairoSurface.xs